# service-trocr-preprocess

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  STORAGE.md  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.traefik-proxy.yml  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: database.py  db_connection.py  main.py  models.py  worker.py
src/app/: __init__.py  celery_app.py  logging_config.py  main.py  models.py  storage.py  tasks.py  worker.py
