[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "service-trocr-preprocess"
dynamic = ["version"]
description = "FastAPI service for TrOCR preprocessing"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Dana Rebecca Meyer", email = "dameyer@techfak.uni-bielefeld.de" },
    { name = "Jonas Widmer", email = "jonas.widmer@unibe.ch" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = [
    "celery>=5.6.3",
    "celery-types>=0.26.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.133.0",
    "flow-preprocessing",
    "huggingface-hub",
    "loguru>=0.7.3",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.12.0",
    "redis>=7.4.0",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.41.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
keywords = [
    "flow-project",
    "preprocessing",
    "htrflow",
    "digital-humanities",
    "htr",
    "handwritten-text-recognition",
    "datasets",
    "huggingface",
    "nlp",
    "machine-learning",
    "trocr",
    "transformers",
    "fastapi",
]

[project.urls]
Homepage = "https://flow-project.net"
Repository = "https://github.com/The-Flow-Project/service-trocr-preprocess"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
flow-preprocessing = { git = "https://github.com/The-Flow-Project/package-preprocessing" }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "app.__version__" }
